flapivor/tests/m3/hopix/typechecker/bad/26-invalid-function-call-12.hopix
def apply : forall a, b. (a -> b) * b -> b (f, x) = f (x)

